Working beta with MailAddress and IPAddress support

--- a/Mvc4Test/Views/Home/Index.cshtml
+++ b/Mvc4Test/Views/Home/Index.cshtml
@@ -11,6 +11,9 @@
     <div>E-mail:<br />
         @Model.Email<br />
         <br />
+        Ip:<br />
+        @Model.IpAddress<br />
+        <br />
         Date:<br />
         <br />
         @Model.Date<br />
